feat: settings page
